...
                                TeamDetailTab.SETTINGS -> "settings_tab"
                            }
                        },
                        text = {
                            Text(
                                when (tab) {
                                    TeamDetailTab.ROSTER -> "Roster"
                                    TeamDetailTab.SUB_GROUPS -> "Sub-groups"
                                    TeamDetailTab.SETTINGS -> "Settings"
                                }
                            )
                        },
                    )
...
